[gd_scene load_steps=15 format=2]

[ext_resource path="res://menu/vignette.png" type="Texture" id=1]
[ext_resource path="res://global/scene_change/scene_change_transition.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/ParticleControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://menu/main_menu.gd" type="Script" id=4]
[ext_resource path="res://menu/splash.png" type="Texture" id=5]
[ext_resource path="res://menu/menu_theme.tres" type="Theme" id=6]

[sub_resource type="Animation" id=9]
resource_name = "Intro"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/ButtonContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/ButtonContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer:custom_constants/separation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -496 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer:margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 250.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/CenterContainer/Splash:rect_pivot_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 380, 248 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/CenterContainer/Splash:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VBoxContainer/CenterContainer/Splash:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Prompt:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Grid:material:shader_param/border_width")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.01 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Post Intro"
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/ButtonContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/ButtonContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer:custom_constants/separation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -496, 70 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer:margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 250.0, 100.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Prompt:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Prompt Anim"
tracks/0/type = "value"
tracks/0/path = NodePath("Prompt:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/ButtonContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/ButtonContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer:custom_constants/separation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -496 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer:margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 100.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/CenterContainer/Splash:rect_pivot_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 380, 248 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/CenterContainer/Splash:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VBoxContainer/CenterContainer/Splash:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Prompt:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Grid:material:shader_param/border_width")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Shader" id=11]
code = "// From Godot Shaders: https://godotshaders.com/shader/2d-grid-with-adjacent-cells/

shader_type canvas_item;

uniform float columns = 64.0;
uniform float rows = 36.0;
uniform float border_width = 0.05;
uniform vec4 border_color : hint_color;


void fragment() {
    vec2 grid = fract(vec2(UV.x * columns, UV.y * rows));
	vec2 bottom_left = step(vec2(border_width), grid);
	vec2 top_right = step(vec2(border_width), 1.0 - grid);
	COLOR = border_color - (bottom_left.x * bottom_left.y * top_right.x * top_right.y);
}"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/columns = 16.0
shader_param/rows = 9.0
shader_param/border_width = 0.0
shader_param/border_color = Color( 0.223529, 0.223529, 0.223529, 1 )

[sub_resource type="Shader" id=8]
code = "// From https://godotshaders.com/shader/color-vignetting/

shader_type canvas_item;

uniform float vignette_intensity = 0.4;
uniform float vignette_opacity : hint_range(0.0, 1.0) = 0.5;
uniform vec4 vignette_rgb : hint_color = vec4(0.0, 0.0, 0.0, 1.0);

float vignette(vec2 uv){
	uv *= 1.0 - uv.xy;
	float vignette = uv.x * uv.y * 15.0;
	return pow(vignette, vignette_intensity * vignette_opacity);
}

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV);
	vec4 text = texture(TEXTURE, UV);
	
	text.rgba *= (vignette_rgb.rgba);
	text.rgba *= (1.0 - vignette(UV));
	
	COLOR = vec4((text.rgb)*color.rgb,text.a);
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 8 )
shader_param/vignette_intensity = 0.3
shader_param/vignette_opacity = 0.4
shader_param/vignette_rgb = Color( 0, 0, 0, 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneChangeTransition" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Intro"
anims/Intro = SubResource( 9 )
"anims/Post Intro" = SubResource( 1 )
"anims/Prompt Anim" = SubResource( 10 )
anims/RESET = SubResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 2
color = Color( 0.133333, 0.141176, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="ColorRect" parent="."]
material = SubResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticleControl" parent="." instance=ExtResource( 3 )]

[node name="Prompt" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.75
anchor_right = 0.5
anchor_bottom = 0.75
margin_left = -660.0
margin_top = -50.0
margin_right = 660.0
theme = ExtResource( 6 )
text = "Press SPACE to continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 100.0
margin_right = -300.0
margin_bottom = -100.0
rect_min_size = Vector2( 1280, 720 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -496
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1320.0
margin_bottom = 496.0
mouse_filter = 1

[node name="Splash" type="TextureRect" parent="VBoxContainer/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 292.0
margin_right = 1027.0
margin_bottom = 496.0
rect_min_size = Vector2( 735, 496 )
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 380, 248 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 57.0
margin_right = 1320.0
margin_bottom = 337.0
custom_constants/separation = 20

[node name="Play" type="Button" parent="VBoxContainer/ButtonContainer"]
margin_right = 1320.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
rect_pivot_offset = Vector2( -1742, -530 )
theme = ExtResource( 6 )
text = "Let's Learn!"

[node name="Settings" type="Button" parent="VBoxContainer/ButtonContainer"]
margin_top = 100.0
margin_right = 1320.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 80 )
rect_pivot_offset = Vector2( -1742, -530 )
theme = ExtResource( 6 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="VBoxContainer/ButtonContainer"]
margin_top = 200.0
margin_right = 1320.0
margin_bottom = 280.0
rect_min_size = Vector2( 0, 80 )
rect_pivot_offset = Vector2( -1742, -530 )
theme = ExtResource( 6 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vignette" type="TextureRect" parent="."]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ButtonContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/Exit" to="." method="_on_Exit_pressed"]
